# test_bug_sdl3_1

./: CMakeLists.txt  main.c
